--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "simplebar": "^6.3.1",
     "three": "^0.156.1"
   }
 }
